# shopping-list

./: .gitignore  .tool-versions  Dockerfile  LICENSE  Makefile  Readme.md  app.py  config.py  docker-compose.yaml  docker-compose.yml  models.py  pyproject.toml  requirements.txt  test-docker-compose.yml  test.dockerfile
api/: .env.tests  .gitignore  Dockerfile  Taskfile.yml  alembic.ini  docker-compose.yml  pyproject.toml  test-docker-compose.yml  test.dockerfile
api/.task/checksum/: install  update
api/src/shopping_list/: auth.py  initial_data.py  main.py  settings.py
api/src/shopping_list/db/: init.py  models.py  session.py
api/src/shopping_list/endpoints/: category.py  health.py  login.py  product.py  shopping_list.py  user.py
api/src/shopping_list/migrations/: env.py
api/src/shopping_list/repository/: category.py  product.py  shopping_list.py  user.py
api/src/shopping_list/schemas/: shopping_list.py  user.py
api/tests/: conftest.py  test_auth_unit.py  test_health_checs_unit.py
api/tests/db/: test_models_integration.py
api/tests/endpoints/: test_category_route_integration.py  test_health_route_integration.py
api/tests/repository/: test_category_integration.py  test_product_integration.py  test_shopping_list_integration.py  test_user_integration.py
backend/: .tool-versions  Dockerfile  Readme.md  Taskfile.yml  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test-docker-compose.yml  test.dockerfile
backend/.task/checksum/: install
backend/app/: auth.py  health_checks.py  initial_data.py  main.py  settings.py
backend/app/crud/: category.py  product.py  shopping_list.py  user.py
backend/app/db/: init.py  models.py  session.py
backend/app/endpoints/: api_router.py  category.py  health.py  login.py  product.py  shopping_list.py  user.py
backend/app/migrations/: env.py
backend/app/repository/: category.py  product.py  shopping_list.py  user.py
backend/app/routers/: health.py
backend/app/schemas/: __init__.py  category.py  product.py  shopping_list.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 70fddd1ab024_init.py  a2190e58db81_init.py
backend/tests/: conftest.py  test_auth_unit.py  test_health_checs_unit.py
backend/tests/db/: test_models.py  test_models_integration.py
backend/tests/endpoints/: test_category_route_integration.py  test_product_route_integration.py  test_shopping_list_route_integration.py
backend/tests/repository/: test_category_integration.py  test_product_integration.py  test_shopping_list_integration.py  test_user_integration.py
backend/tests/schemas/: test_product_unit.py
backend/tests/unit/: test_auth.py  test_health_checs.py
(+31 files in other folders)
